[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/characters/character.gd" type="Script" id=1]
[ext_resource path="res://src/characters/ship_stats.gd" type="Script" id=2]

[sub_resource type="Resource" id=1]
script = ExtResource( 2 )
max_speed = 260.0
max_hp = 28.0
_cap_max_speed = Vector2( 200, 380 )
_cap_max_hp = Vector2( 20, 36 )

[node name="Character" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )
stats = SubResource( 1 )

[node name="FlickeringTimer" type="Timer" parent="."]

[node name="InvencibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="LifeFlickeringTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="FlickeringTimer" to="." method="_on_flickering_timer_timeout"]
[connection signal="timeout" from="InvencibilityTimer" to="." method="_on_invencibility_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="LifeFlickeringTimer" to="." method="_on_life_flickering_timer_timeout"]
